--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -38,7 +38,87 @@
   <!-- footer -->
 
   <footer>
+    <div class="container-fluid mt-3 footer">
+      <div class="row">
 
+        <!-- col1 -->
+
+        <div class="col-sm-10 col-md-6 col-lg-4 d-none d-lg-block text-white">
+          <div class="d-flex align-items-center py-3">
+            <img src="img/SBN-removebg-preview.png" alt="logo SBN" class="iconFooter">
+          </div>
+          <div class="py-1 d-flex align-items-end">
+            <p>All Rights Reserved 2023 &copy;</p>
+          </div>
+        </div>
+
+        <!-- col2 -->
+
+        <div class="col-sm-10 col-md-6 col-lg-4 text-white">
+          <div class="d-flex align-items-center py-3">
+            <h3>Nuestras redes</h3> 
+          </div>
+          <div class="d-flex justify-content-around flex-column py-1">
+            <!-- red1 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+              </div>
+              <a href="https://www.instagram.com/luiscorrea._/" class="link-light text-decoration-none" target="_blank"><h5>@...</h5></a>
+            </div>
+            <!-- red2 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+              </div>
+              <a href="" class="link-light text-decoration-none" target="_blank"><h5>@...</h5></a>
+            </div>
+            <!-- red3 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+              </div>
+              <a href="" class="link-light text-decoration-none" target="_blank"><h5>@...</h5></a>
+            </div>
+            <!-- red4 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+              </div>
+              <a href="" class="link-light text-decoration-none" target="_blank"><h5>@...</h5></a>
+            </div>
+            <!-- red5 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+              </div>
+              <a href="" class="link-light text-decoration-none" target="_blank"><h5>@...</h5></a>
+            </div>
+            <div class="d-flex justify-content-end align-items-end d-md-none">
+              <div class="buttonStart d-flex justify-content-center align-items-center">
+                <a href="#headerPag">⬆</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- col3 -->
+
+        <div class="col-sm-10 col-md-6 col-lg-4 d-none d-md-block text-white">
+          <div class=" py-3">
+            <h3>Mas Info</h3>
+          </div>
+          <div class="py-1">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic corporis quidem deleniti, rem quasi unde fugit incidunt eum, sunt iste explicabo harum reprehenderit culpa fuga labore suscipit. Aliquam, dicta adipisci? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque quis voluptatum temporibus consectetur, facere, et dicta tempora dolor saepe autem eveniet consequuntur sint earum, illum culpa aspernatur suscipit est harum!</p>
+            <div class="d-flex justify-content-end align-items-end">
+              <div class="buttonStart d-flex justify-content-center align-items-center">
+                <a href="#headerPag">⬆</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </footer>
 
   <!-- script bootstrap -->
