--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="twitter:description" content="Blog de noticias deportivas con las últimas novedades, resultados y análisis de eventos deportivos.">
   <meta name="twitter:image" content="ruta-a-tu-imagen.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>SBN proyecto</title>
 </head>
 
