--- a/index.html
+++ b/index.html
@@ -38,7 +38,27 @@
   <!-- footer -->
 
   <footer>
+    <div class="container-fluid mt-3 footer">
+      <div class="row text-white">
+        <!-- col1 -->
+        <div class="col-sm-10 col-md-6 col-lg-4 d-none d-lg-block">
+          <div>
+            <img src="..." alt="iconoSBN">
+          </div>
+          <div class="py-1 d-flex align-items-end">
+            <p>All Rights Reserved 2023 &copy;</p>
+          </div>
+        </div>
+        <!-- col2 -->
+        <div class="col-sm-10 col-md-6 col-lg-4">
 
+        </div>
+        <!-- col3 -->
+        <div class="col-sm-10 col-md-6 col-lg-4 d-none d-md-block">
+
+        </div>
+      </div>
+    </div>
   </footer>
 
   <!-- script bootstrap -->
