--- a/index.html
+++ b/index.html
@@ -51,7 +51,17 @@
         </div>
         <!-- col2 -->
         <div class="col-sm-10 col-md-6 col-lg-4">
-
+          <div class="py-3">
+            <h3>Nuestras redes</h3>
+          </div>
+          <div class="d-flex justify-content-around flex-column py-1">
+            <!-- red1 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.svg" alt="instagram" class="iconInsta me-2">
+              </div>
+            </div>
+          </div>
         </div>
         <!-- col3 -->
         <div class="col-sm-10 col-md-6 col-lg-4 d-none d-md-block">
