--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
           <div class="d-flex justify-content-around flex-column py-1">
             <!-- red1 -->
             <div class="d-flex mb-1">
-              <div>
-                <img src="img/instagram.svg" alt="instagram" class="iconInsta me-2">
+              <div class="d-flex flex-column">
+                <a href="https://www.instagram.com/luiscorrea._/">
+                  <img src="img/instagram.svg" alt="ig">
+                  <p>waieowi</p>
+                </a>
               </div>
             </div>
           </div>
