--- a/index.html
+++ b/index.html
@@ -55,15 +55,47 @@
             <h3>Nuestras redes</h3>
           </div>
           <div class="d-flex justify-content-around flex-column py-1">
+            
             <!-- red1 -->
             <div class="d-flex mb-1">
-              <div class="d-flex flex-column">
-                <a href="https://www.instagram.com/luiscorrea._/">
-                  <img src="img/instagram.svg" alt="ig">
-                  <p>waieowi</p>
-                </a>
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
               </div>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@...</h5></a>
             </div>
+
+            <!-- red2 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+              </div>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@...</h5></a>
+            </div>
+
+            <!-- red3 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+              </div>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@...</h5></a>
+            </div>
+
+            <!-- red4 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+              </div>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@...</h5></a>
+            </div>
+
+            <!-- red5 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+              </div>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@...</h5></a>
+            </div>
+
           </div>
         </div>
         <!-- col3 -->
