--- a/index.html
+++ b/index.html
@@ -26,7 +26,28 @@
   <!-- header -->
 
   <header id="headerPag">
-    <h2>hola</h2>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand logo px-5" href="#"><img src="./img/SBN-removebg-preview.png" alt="Logo" width="130px"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active text-dark fw-bold" aria-current="page" href="#">SUSCRIBIRSE</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-dark fw-bold" href="#">CONTACTO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-dark fw-bold" href="#">ACERCA DE</a>
+            </li>
+          </ul>
+        </div>
+        <a href=""><img src="./img/login.png" alt="" width="50px"></a>
+      </div>
+    </nav>
   </header>
 
   <!-- main -->
