--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <header id="headerPag">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand logo px-5" href="#"><img src="./img/SBN-removebg-preview.png" alt="Logo" width="130px"></a>
+        <a class="navbar-brand logo mx-5 logo" href="#"><img src="./img/SBN-removebg-preview.png" alt="Logo" width="130px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -45,7 +45,7 @@
             </li>
           </ul>
         </div>
-        <a href=""><img src="./img/login.png" alt="" width="50px"></a>
+        <a href="img-login" class="mx-5"><img src="./img/login.png" alt="" width="50px"></a>
       </div>
     </nav>
   </header>
