--- a/index.html
+++ b/index.html
@@ -26,26 +26,28 @@
   <!-- header -->
 
   <header id="headerPag">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand logo mx-5 logo" href="#"><img src="./img/SBN-removebg-preview.png" alt="Logo" width="130px"></a>
+    <nav class="navbar navbar-expand-lg p-3">
+      <div class="container">
+        <div>
+          <img src="./img/SBN-removebg-preview.png" alt="logo">
+        </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active text-dark fw-bold" aria-current="page" href="#">SUSCRIBIRSE</a>
+              <a class="nav-link active fw-bold text-light fs-5" aria-current="page" href="#">Suscribirse</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-dark fw-bold" href="#">CONTACTO</a>
+              <a class="nav-link fw-bold text-light fs-5" href="#">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-dark fw-bold" href="#">ACERCA DE</a>
+              <a class="nav-link fw-bold text-light fs-5" href="#">Acerca de</a>
             </li>
           </ul>
         </div>
-        <a href="img-login" class="mx-5"><img src="./img/login.png" alt="" width="50px"></a>
+        <button class="btn"><img src="./img/login 2.png" alt="img-login" width="50px"></button>
       </div>
     </nav>
   </header>
