--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <a class="nav-link fw-bold text-light fs-5" href="#">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold text-light fs-5" href="#">Acerca de</a>
+              <a class="nav-link fw-bold text-light fs-5" href="./acerca-de.html">Acerca de</a>
             </li>
           </ul>
         </div>
