--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div class="col-sm-10 col-md-6 col-lg-4 d-none d-lg-block">
           <div>
-            <img src="..." alt="iconoSBN">
+            <img src="img/SBN.png" alt="iconoSBN" class="iconoSBN">
           </div>
           <div class="py-1 d-flex align-items-end">
             <p>All Rights Reserved 2023 &copy;</p>
