--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <!-- slider main -->
 
-    <div class="container-fluid">
+    <div class="container-fluid d-none d-md-flex">
       <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
