problema padding arreglado

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <!-- slider main -->
 
-    <div class="container-fluid d-none d-md-flex">
+    <div class="container-fluid d-none d-md-flex contSlider">
       <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -96,6 +96,15 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+      </div>
+    </div>
+
+    <!-- columnas posts main -->
+
+    <div class="container vh-100">
+      <div class="row">
+        <div class="col-8"></div>
+        <div class="col-4"></div>
       </div>
     </div>
   </main>
@@ -175,13 +184,13 @@
         <!-- col3 -->
 
         <div class="col-sm-10 col-md-6 col-lg-4 d-none d-md-block">
-          <div class=" py-3">
+          <div class="py-3">
             <h3>Mas Info</h3>
           </div>
-          <div class="py-1">
+          <div class="p-1">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic corporis quidem deleniti, rem quasi unde fugit incidunt eum, sunt iste explicabo harum reprehenderit culpa fuga labore suscipit. Aliquam, dicta adipisci? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque quis voluptatum temporibus consectetur, facere, et dicta tempora dolor saepe autem eveniet consequuntur sint earum, illum culpa aspernatur suscipit est harum!</p>
             <div class="d-flex justify-content-end align-items-end">
-              <div class="buttonStart d-flex justify-content-center align-items-center m-2">
+              <div class="buttonStart d-flex justify-content-center align-items-center">
                 <a href="#headerPag">⬆</a>
               </div>
             </div>
