--- a/index.html
+++ b/index.html
@@ -100,13 +100,24 @@
     </div>
 
     <!-- columnas posts main -->
+    <div class="container-fluid vh-100">
+      <div class="row">
+        <!-- columna 1/posts -->
+        <div class="col-12 col-md-7 col-lg-9 columnaPost vh-100">
 
+        </div>
+        <!-- columna 2/search-form -->
+        <div class="col-12 col-md-5 col-lg-3 columnaForm vh-100">
+
+        </div>
+      </div>
+    </div>
   </main>
 
   <!-- footer -->
 
   <footer>
-    <div class="container-fluid mt-3 footer">
+    <div class="container-fluid footer">
       <div class="row text-white">
 
         <!-- col1 -->
