--- a/index.html
+++ b/index.html
@@ -100,14 +100,42 @@
     </div>
 
     <!-- columnas posts main -->
-    <div class="container-fluid vh-100">
+    <div class="container-fluid">
       <div class="row">
         <!-- columna 1/posts -->
-        <div class="col-12 col-md-7 col-lg-9 columnaPost vh-100">
-
+        <div class="col-12 col-md-7 col-lg-9 columnaPost">
+          <div class="container py-4">
+            <!-- post/card1 -->
+            <div class="card mb-3">
+              <img src="https://picsum.photos/0/800?random=1" class="card-img-top p-2" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <a href="#" class="btn btn-primary">Leer</a>
+              </div>
+            </div>
+            <!-- post/card2 -->
+            <div class="card mb-3">
+              <img src="https://picsum.photos/0/800?random=1" class="card-img-top p-2" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <a href="#" class="btn btn-primary">Leer</a>
+              </div>
+            </div>
+            <!-- post/card3 -->
+            <div class="card mb-3">
+              <img src="https://picsum.photos/0/800?random=1" class="card-img-top p-2" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <a href="#" class="btn btn-primary">Leer</a>
+              </div>
+            </div>
+          </div>
         </div>
         <!-- columna 2/search-form -->
-        <div class="col-12 col-md-5 col-lg-3 columnaForm vh-100">
+        <div class="col-12 col-md-5 col-lg-3 columnaForm">
 
         </div>
       </div>
