cards a completar con info

--- a/index.html
+++ b/index.html
@@ -103,35 +103,52 @@
     <div class="container-fluid">
       <div class="row">
         <!-- columna 1/posts -->
-        <div class="col-12 col-md-7 col-lg-9 columnaPost">
+        <div class="col-12 col-md-7 col-lg-9 columnaPost" id="colPost1">
           <div class="container py-4">
             <!-- post/card1 -->
             <div class="card mb-3">
               <img src="https://picsum.photos/0/800?random=1" class="card-img-top p-2" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <a href="#" class="btn btn-primary">Leer</a>
+                <h5 class="card-title">Titulo</h5>
+                <p class="card-text">Texto descriptivo de la card.</p>
+                <a href="#" class="btn btn-light">Leer</a>
               </div>
             </div>
             <!-- post/card2 -->
             <div class="card mb-3">
               <img src="https://picsum.photos/0/800?random=1" class="card-img-top p-2" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <a href="#" class="btn btn-primary">Leer</a>
+                <h5 class="card-title">Titulo</h5>
+                <p class="card-text">Texto descriptivo de la card.</p>
+                <a href="#" class="btn btn-light">Leer</a>
               </div>
             </div>
             <!-- post/card3 -->
             <div class="card mb-3">
               <img src="https://picsum.photos/0/800?random=1" class="card-img-top p-2" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <a href="#" class="btn btn-primary">Leer</a>
+                <h5 class="card-title">Titulo</h5>
+                <p class="card-text">Texto descriptivo de la card.</p>
+                <a href="#" class="btn btn-light">Leer</a>
               </div>
             </div>
+            <!-- paginacion -->
+              <ul class="pagination pagination-sm justify-content-center">
+                <li class="page-item">
+                  <a class="page-link" href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                  </a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#colPost1">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                  <a class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
           </div>
         </div>
         <!-- columna 2/search-form -->
