segunda columna terminada

--- a/index.html
+++ b/index.html
@@ -153,7 +153,47 @@
         </div>
         <!-- columna 2/search-form -->
         <div class="col-12 col-md-5 col-lg-3 columnaForm">
-
+          <div class="container py-4">
+            <!-- form busqueda -->
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-success" type="submit">Search</button>
+            </form>
+            <!-- lista de temas -->
+            <div class="list-group pt-5">
+              <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
+                Categoria activa
+              </a>
+              <a href="#" class="list-group-item list-group-item-action">categoria 2</a>
+              <a href="#" class="list-group-item list-group-item-action">categoria 3</a>
+              <a href="#" class="list-group-item list-group-item-action">categoria 4</a>
+              <a class="list-group-item list-group-item-action disabled">categoria 5 disabled</a>
+            </div>
+            <!-- publicidad -->
+            <div class="align-items-center my-4 flex-column d-none d-md-flex">
+              <!-- anuncio1 -->
+              <div class="card" style="width: 18rem;">
+                <img src="https://picsum.photos/0/0?random=1" class="card-img-top d-none d-lg-block" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Publicidad 1</p>
+                </div>
+              </div>
+              <!-- anuncio2 -->
+              <div class="card" style="width: 18rem;">
+                <img src="https://picsum.photos/0/0?random=1" class="card-img-top d-none d-lg-block" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Publicidad 2</p>
+                </div>
+              </div>
+              <!-- anuncio3 -->
+              <div class="card" style="width: 18rem;">
+                <img src="https://picsum.photos/0/0?random=1" class="card-img-top d-none d-lg-block" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Publicidad 3</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
