--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active fw-bold text-light fs-5" aria-current="page" href="#">Suscribirse</a>
+              <button type="button" class="btn fw-bold text-light fs-5" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Suscribirse
+              </button>
             </li>
             <li class="nav-item">
               <a class="nav-link fw-bold text-light fs-5" href="#">Contacto</a>
@@ -50,6 +52,23 @@
         <button class="btn"><img src="./img/login 2.png" alt="img-login" width="50px"></button>
       </div>
     </nav>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </header>
 
   <!-- main -->
