--- a/index.html
+++ b/index.html
@@ -101,24 +101,24 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="https://picsum.photos/0/800?random=1" class="d-block w-100" alt="slide1">
+            <img src="img/messiSlider.jpg" class="d-block w-100" alt="slide1">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h5 class="fs-1 fw-bolder">Futbol</h5>
+              <p class="fs-3 d-none d-lg-block">Lo mejor del deporte mas famoso en el mundo entero</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="https://picsum.photos/0/800?random=1" class="d-block w-100" alt="slide2">
+            <img src="img/rugbySlider.webp" class="d-block w-100" alt="slide2">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <h5 class="fs-1 fw-bolder">Rugby</h5>
+              <p class="fs-3 d-none d-lg-block">Lo ultimo del deporte con el mayor esfuerzo fisico</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="https://picsum.photos/0/800?random=1" class="d-block w-100" alt="slide3">
+            <img src="img/jokicSlider.jpeg" class="d-block w-100" alt="slide3">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5 class="fs-1 fw-bolder">Basketball</h5>
+              <p class="fs-3 d-none d-lg-block">Todo sobre la NBA y el mejor basket</p>
             </div>
           </div>
         </div>
