--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <!-- header -->
 
-  <header id="headerPag">
+  <header id="headerPag" class="fixed-top">
     <nav class="navbar navbar-expand-lg p-3">
       <div class="container">
         <div>
