posts del main terminados

--- a/index.html
+++ b/index.html
@@ -141,28 +141,28 @@
           <div class="container py-4">
             <!-- post/card1 -->
             <div class="card mb-3">
-              <img src="https://picsum.photos/0/800?random=1" class="card-img-top p-2" alt="...">
+              <img src="img/messiPost.webp" class="card-img-top p-2" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Titulo</h5>
-                <p class="card-text">Texto descriptivo de la card.</p>
+                <h5 class="card-title fs-3 fw-bold">Messi sobre el mundial 2026</h5>
+                <p class="card-text fs-4">La frase con la que Lionel Messi dio a entender su presencia en el mundial 2026</p>
                 <a href="#" class="btn btn-light">Leer</a>
               </div>
             </div>
             <!-- post/card2 -->
             <div class="card mb-3">
-              <img src="https://picsum.photos/0/800?random=1" class="card-img-top p-2" alt="...">
+              <img src="img/pumas-7s_862x485.webp" class="card-img-top p-2" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Titulo</h5>
-                <p class="card-text">Texto descriptivo de la card.</p>
+                <h5 class="card-title fs-3 fw-bold">Los Pumas 7's en cuartos</h5>
+                <p class="card-text fs-4">El seleccionado de rugby 7 de los Pumas clasificaron a cuartos de final en la copa oro de Londres y sueñan con un titulo nuevo</p>
                 <a href="#" class="btn btn-light">Leer</a>
               </div>
             </div>
             <!-- post/card3 -->
             <div class="card mb-3">
-              <img src="https://picsum.photos/0/800?random=1" class="card-img-top p-2" alt="...">
+              <img src="img/denver-nuggets-campeon-de-la-nba_862x485.webp" class="card-img-top p-2" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Titulo</h5>
-                <p class="card-text">Texto descriptivo de la card.</p>
+                <h5 class="card-title fs-3 fw-bold">Denver Nuggets campeones de la NBA 2023</h5>
+                <p class="card-text fs-4">Con un desempeño extraordinario Denver se impuso frente a Miami por 4-1 y se consagro campeon de la NBA por primera vez en su historia</p>
                 <a href="#" class="btn btn-light">Leer</a>
               </div>
             </div>
