--- a/galeria.html
+++ b/galeria.html
@@ -21,11 +21,11 @@
   <title>SBN proyecto</title>
 </head>
 
-<body>
+<body id="bodyTop">
 
   <!-- header -->
 
-  <header id="headerPag">
+  <header class="fixed-top">
     <nav class="navbar navbar-expand-lg p-3">
       <div class="container">
         <div>
@@ -205,7 +205,7 @@
             </div>
             <div class="d-flex justify-content-end d-md-none m-1">
               <div class="buttonStart d-flex justify-content-center align-items-center">
-                <a href="#headerPag">⬆</a>
+                <a href="#bodyTop">⬆</a>
               </div>
             </div>
           </div>
@@ -221,7 +221,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic corporis quidem deleniti, rem quasi unde fugit incidunt eum, sunt iste explicabo harum reprehenderit culpa fuga labore suscipit. Aliquam, dicta adipisci? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque quis voluptatum temporibus consectetur, facere, et dicta tempora dolor saepe autem eveniet consequuntur sint earum, illum culpa aspernatur suscipit est harum!</p>
             <div class="d-flex justify-content-end align-items-end">
               <div class="buttonStart d-flex justify-content-center align-items-center">
-                <a href="#headerPag">⬆</a>
+                <a href="#bodyTop">⬆</a>
               </div>
             </div>
           </div>
