--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@
                 </li>
               </ul>
             </nav>
+            <div class="text-center">
+              <a href="galeria.html" class="botonGallery text-white bg-primary p-1 fs-6 fw-bold">Galeria</a>
+            </div>
           </div>
         </div>
         <!-- columna 2/search-form -->
