--- a/acerca-de.html
+++ b/acerca-de.html
@@ -10,47 +10,48 @@
 <body>
   <main>
     <h1 class=" text-center fw-bold text-light mt-4">ROLLING BOYS</h1>
-    <div class="text-center text-dark fw-bold mt-5">
-      <p class="sobre-nosotros">Somos un grupo de jóvenes, amantes de la tecnología en busca de un lugar dentro de la industria para el futuro. <br> Actualmente estudiamos en Rolling Code, con mucha ilusión y ganas para poder vivir de lo que más nos gusta.</p>
-      <div class=" d-inline">
-        <p class="text-light fw-bold"> Para desarrollar éste proyecto usamos los siguientes lenguajes:</p>
-        <div class="button-rounded-container mx-5 d-inline">
-          <a href="#" class="button-rounded">HTML</a>
-          <a href="#" class="button-rounded">CSS</a>
-          <a href="#" class="button-rounded">BOOTSTRAP</a>
-          <!-- <a href="" class="button-rounded">GIT & GITHUB</a> -->
-        </div>
-      </div>
-    </div>
-    <div class="d-flex justify-content-center mt-5 mb-5">
+    <div class="d-flex container justify-content-center p-5">
       <div class="card tarjets mx-3 w-25">
-        <img src="./img/Damian-Correa-removebg-preview.png" class="card-img-top rounded-pill" alt="Damián Correa">
+        <img src="./img/Damian-Correa-removebg-preview.png" class="card-img-top rounded-pill img-efect" alt="Damián Correa">
         <div class="card-body">
           <h5 class="card-title text-light text-center fw-bold">Damián Correa</h5>
         </div>
       </div>
       <div class="card tarjets mx-3 w-25">
-        <img src="./img/Luis-Correa-removebg-preview.png" class="card-img-top rounded-pill" alt="Luis Correa">
+        <img src="./img/Luis-Correa-removebg-preview.png" class="card-img-top rounded-pill img-efect" alt="Luis Correa">
         <div class="card-body mt-5">
           <h5 class="card-title text-light text-center fw-bold">Luis Correa</h5>
         </div>
       </div>
       <div class="card tarjets mx-3 w-25">
-        <img src="./img/Marcos-Coronel-removebg-preview.png" class="card-img-top rounded-pill" alt="Marcos Coronel">
+        <img src="./img/Marcos-Coronel-removebg-preview.png" class="card-img-top rounded-pill img-efect" alt="Marcos Coronel">
         <div class="card-body">
           <h5 class="card-title text-light text-center fw-bold">Marcos Coronel</h5>
         </div>
       </div>
       <div class="card tarjets mx-3 w-25">
-        <img src="./img/Lucas-Fernandez.png" class="card-img-top rounded-pill" alt="Lucas Lucas Fernandez">
+        <img src="./img/Lucas-Fernandez.png" class="card-img-top rounded-pill img-efect" alt="Lucas Lucas Fernandez">
         <div class="card-body mt-5">
           <h5 class="card-title text-light text-center fw-bold">Lucas Fernández</h5>
         </div>
       </div>
       <div class="card tarjets mx-3 w-25">
-        <img src="./img/Ivan-Mena-removebg-preview.png" class="card-img-top rounded-pill" alt="Iván Mena">
+        <img src="./img/Ivan-Mena-removebg-preview.png" class="card-img-top rounded-pill img-efect" alt="Iván Mena">
         <div class="card-body mt-5">
-          <h5 class="card-title text-light text-center fw-bold">Iván Mena</h5>
+          <h5 class="card-title text-light text-center fw-bold mt-5">Iván Mena</h5>
+        </div>
+      </div>
+    </div>
+    <div class="text-center text-dark fw-bold">
+      <p class="sobre-nosotros p-sm-2">Somos un grupo de jóvenes, amantes de la tecnología en busca de un lugar dentro de la industria para el futuro. <br> Actualmente estudiamos en Rolling Code, con mucha ilusión y ganas para poder vivir de lo que más nos gusta.</p>
+      <hr>
+      <div class="flex-sm-column mb-5">
+        <p class="text-light fw-bold"> Para desarrollar éste proyecto usamos:</p>
+        <div class="button-rounded-container mx-5 d-inline">
+          <a href="#" class="button-rounded">HTML</a>
+          <a href="#" class="button-rounded">CSS</a>
+          <a href="#" class="button-rounded">BOOTSTRAP</a>
+          <a href="" class="button-rounded">GIT & GITHUB</a>
         </div>
       </div>
     </div>
