--- a/galeria.html
+++ b/galeria.html
@@ -133,8 +133,11 @@
           <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
             <img src="https://picsum.photos/0/0?random=1" alt="imagen galeria">
           </div>
-          
         </div>
+        <div class="text-center pt-4">
+          <a href="index.html" class="botonGallery text-white bg-primary p-1 fs-6 fw-bold text-decoration-none">Volver</a>
+        </div>
+      </div>
     </div>
 
   </main>
@@ -142,7 +145,7 @@
   <!-- footer -->
 
   <footer>
-    <div class="container-fluid footer">
+    <div class="container-fluid footer text-center">
       <div class="row text-white">
 
         <!-- col1 -->
@@ -151,25 +154,25 @@
           <div>
             <img src="img/SBN.png" alt="iconoSBN" class="iconoSBN">
           </div>
-          <div class="py-1 d-flex align-items-end">
-            <p>All Rights Reserved 2023 &copy;</p>
+          <div class="py-1 d-flex justify-content-center">
+            <p class="copyright">All Rights Reserved 2023 &copy;</p>
           </div>
         </div>
 
         <!-- col2 -->
 
         <div class="col-sm-10 col-md-6 col-lg-4">
-          <div class="py-3 d-flex align-items-center">
+          <div class="py-3 d-flex align-items-center justify-content-center">
             <h3>Nuestras redes</h3>
           </div>
-          <div class="d-flex justify-content-around flex-column py-1">
+          <div class="d-flex justify-content-around align-items-center flex-column py-1">
 
             <!-- red1 -->
             <div class="d-flex mb-1">
               <div>
                 <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
               </div>
-              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@...</h5></a>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Damian</h5></a>
             </div>
 
             <!-- red2 -->
@@ -177,7 +180,7 @@
               <div>
                 <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
               </div>
-              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@...</h5></a>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Luis</h5></a>
             </div>
 
             <!-- red3 -->
@@ -185,7 +188,7 @@
               <div>
                 <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
               </div>
-              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@...</h5></a>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Marcos</h5></a>
             </div>
 
             <!-- red4 -->
@@ -193,7 +196,7 @@
               <div>
                 <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
               </div>
-              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@...</h5></a>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Lucas</h5></a>
             </div>
 
             <!-- red5 -->
@@ -201,7 +204,7 @@
               <div>
                 <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
               </div>
-              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@...</h5></a>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Ivan</h5></a>
             </div>
             <div class="d-flex justify-content-end d-md-none m-1">
               <div class="buttonStart d-flex justify-content-center align-items-center">
@@ -218,7 +221,7 @@
             <h3>Mas Info</h3>
           </div>
           <div class="p-1">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic corporis quidem deleniti, rem quasi unde fugit incidunt eum, sunt iste explicabo harum reprehenderit culpa fuga labore suscipit. Aliquam, dicta adipisci? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque quis voluptatum temporibus consectetur, facere, et dicta tempora dolor saepe autem eveniet consequuntur sint earum, illum culpa aspernatur suscipit est harum!</p>
+            <p>Blog Deportivo creado para poder mantener informado a los fanaticos del mundo de los deportes. <br> contamos con las ultimas noticias sobre los deportes mas importantes y pasionales del mundo. <br> Futbol, Rugby, Basketball, Automovilismo, Tenis, Etc. <br> Informacion actualizada de las mejores competiciones de todos los deportes</p>
             <div class="d-flex justify-content-end align-items-end">
               <div class="buttonStart d-flex justify-content-center align-items-center">
                 <a href="#bodyTop">⬆</a>
@@ -226,9 +229,7 @@
             </div>
           </div>
         </div>
-        
       </div>
-    </div>
   </footer>
 
   <!-- script bootstrap -->
