--- a/acerca-de.html
+++ b/acerca-de.html
@@ -8,6 +8,66 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+  <header class="fixed-top">
+    <nav class="navbar navbar-expand-lg p-3">
+      <div class="container">
+        <div>
+          <img src="./img/SBN-removebg-preview.png" alt="logo">
+        </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <button type="button" class="btn fw-bold text-light fs-5" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Suscribirse
+              </button>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-bold text-light fs-5" href="#">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-bold text-light fs-5" href="./acerca-de.html">Acerca de</a>
+            </li>
+          </ul>
+        </div>
+        <button class="btn"><img src="./img/login 2.png" alt="img-login" width="50px"></button>
+      </div>
+    </nav>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content bg-dark text-white">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Suscribirse</h1>
+          </div>
+          <div class="modal-body">
+            <div>
+              <form>
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+                  <div id="emailHelp" class="form-text">No compartiremos esta informacion con nadie.</div>
+                </div>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label">Numero de telefono</label>
+                  <input type="number" class="form-control" id="exampleInputCellphone" required>
+                </div>
+                <div class="mb-3 form-check">
+                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                  <label class="form-check-label" for="exampleCheck1">Recordarme</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+              </form>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
   <main>
     <h1 class=" text-center fw-bold text-light mt-4">ROLLING BOYS</h1>
     <div class="d-flex container justify-content-center p-5">
