imagenes puestas en gallery

--- a/galeria.html
+++ b/galeria.html
@@ -98,22 +98,22 @@
         </div>
         <div class="row d-flex justify-content-center">
           <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
-            <img src="https://picsum.photos/0/0?random=1" alt="imagen galeria">
+            <img src="img/messiSlider.jpg" alt="imagen galeria">
           </div>
           <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
-            <img src="https://picsum.photos/0/0?random=1" alt="imagen galeria">
+            <img src="img/rugbySlider.webp" alt="imagen galeria">
           </div>
           <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
-            <img src="https://picsum.photos/0/0?random=1" alt="imagen galeria">
+            <img src="img/jokicSlider.jpeg" alt="imagen galeria">
           </div>
           <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
-            <img src="https://picsum.photos/0/0?random=1" alt="imagen galeria">
+            <img src="img/messiPost.webp" alt="imagen galeria">
           </div>
           <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
-            <img src="https://picsum.photos/0/0?random=1" alt="imagen galeria">
+            <img src="img/pumas-7s_862x485.webp" alt="imagen galeria">
           </div>
           <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
-            <img src="https://picsum.photos/0/0?random=1" alt="imagen galeria">
+            <img src="img/denver-nuggets-campeon-de-la-nba_862x485.webp" alt="imagen galeria">
           </div>
           <div class="col-10 col-md-4 col-lg-3 containerImgGallery py-2">
             <img src="https://picsum.photos/0/0?random=1" alt="imagen galeria">
