--- a/acerca-de.html
+++ b/acerca-de.html
@@ -116,6 +116,95 @@
       </div>
     </div>
     </main>
+    <footer>
+      <div class="container-fluid footer text-center">
+        <div class="row text-white">
+  
+          <!-- col1 -->
+  
+          <div class="col-sm-10 col-md-6 col-lg-4 d-none d-lg-block">
+            <div>
+              <img src="img/SBN.png" alt="iconoSBN" class="iconoSBN">
+            </div>
+            <div class="py-1 d-flex justify-content-center">
+              <p class="copyright">All Rights Reserved 2023 &copy;</p>
+            </div>
+          </div>
+  
+          <!-- col2 -->
+  
+          <div class="col-sm-10 col-md-6 col-lg-4">
+            <div class="py-3 d-flex align-items-center justify-content-center">
+              <h3 class="text-center">Nuestras redes</h3>
+            </div>
+            <div class="d-flex justify-content-around align-items-center flex-column py-1">
+  
+              <!-- red1 -->
+              <div class="d-flex mb-1">
+                <div>
+                  <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+                </div>
+                <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Damian</h5></a>
+              </div>
+  
+              <!-- red2 -->
+              <div class="d-flex mb-1">
+                <div>
+                  <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+                </div>
+                <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Luis</h5></a>
+              </div>
+  
+              <!-- red3 -->
+              <div class="d-flex mb-1">
+                <div>
+                  <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+                </div>
+                <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Marcos</h5></a>
+              </div>
+  
+              <!-- red4 -->
+              <div class="d-flex mb-1">
+                <div>
+                  <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+                </div>
+                <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Lucas</h5></a>
+              </div>
+  
+              <!-- red5 -->
+              <div class="d-flex mb-1">
+                <div>
+                  <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+                </div>
+                <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Ivan</h5></a>
+              </div>
+              <div class="d-flex justify-content-end align-self-end d-md-none m-1">
+                <div class="buttonStart d-flex justify-content-center align-items-center">
+                  <a href="#bodyTop">⬆</a>
+                </div>
+              </div>
+            </div>
+          </div>
+  
+          <!-- col3 -->
+  
+          <div class="col-sm-10 col-md-6 col-lg-4 d-none d-md-block">
+            <div class="py-3">
+              <h3>Mas Info</h3>
+            </div>
+            <div class="p-1">
+              <p>Blog Deportivo creado para poder mantener informado a los fanaticos del mundo de los deportes. <br> contamos con las ultimas noticias sobre los deportes mas importantes y pasionales del mundo. <br> Futbol, Rugby, Basketball, Automovilismo, Tenis, Etc. <br> Informacion actualizada de las mejores competiciones de todos los deportes </p>
+              <div class="d-flex justify-content-end align-items-end">
+                <div class="buttonStart d-flex justify-content-center align-items-center">
+                  <a href="#bodyTop">⬆</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+    </footer>
     
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
