detalles del main

--- a/index.html
+++ b/index.html
@@ -103,21 +103,21 @@
           <div class="carousel-item active">
             <img src="img/messiSlider.jpg" class="d-block w-100" alt="Slide Futbol">
             <div class="carousel-caption d-none d-md-block">
-              <h5 class="fs-1 fw-bolder">Futbol</h5>
-              <p class="fs-3 d-none d-lg-block">Lo mejor del deporte mas famoso en el mundo entero</p>
+              <h5 class="fs-1 fw-bolder">Fútbol</h5>
+              <p class="fs-3 d-none d-lg-block">Lo mejor del deporte más famoso en el mundo entero</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/rugbySlider.webp" class="d-block w-100" alt="Slide Rugby">
             <div class="carousel-caption d-none d-md-block">
               <h5 class="fs-1 fw-bolder">Rugby</h5>
-              <p class="fs-3 d-none d-lg-block">Lo ultimo del deporte con el mayor esfuerzo fisico</p>
+              <p class="fs-3 d-none d-lg-block">Lo último del deporte con el mayor esfuerzo físico</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/jokicSlider.jpeg" class="d-block w-100" alt="Slide NBA">
             <div class="carousel-caption d-none d-md-block">
-              <h5 class="fs-1 fw-bolder">Basketball</h5>
+              <h5 class="fs-1 fw-bolder">Básquetbol</h5>
               <p class="fs-3 d-none d-lg-block">Todo sobre la NBA y el mejor basket</p>
             </div>
           </div>
@@ -144,7 +144,7 @@
               <img src="img/messiPost.webp" class="card-img-top p-2" alt="Messi post">
               <div class="card-body">
                 <h5 class="card-title fs-3 fw-bold">Messi sobre el mundial 2026</h5>
-                <p class="card-text fs-4">La frase con la que Lionel Messi dio a entender su presencia en el mundial 2026</p>
+                <p class="card-text fs-4">La frase con la que Lionel Messi dio a entender su presencia en el mundial 2026.</p>
                 <a href="#" class="btn btn-light">Leer</a>
               </div>
             </div>
@@ -153,7 +153,7 @@
               <img src="img/pumas-7s_862x485.webp" class="card-img-top p-2" alt="Pumas 7 post">
               <div class="card-body">
                 <h5 class="card-title fs-3 fw-bold">Los Pumas 7's en cuartos</h5>
-                <p class="card-text fs-4">El seleccionado de rugby 7 de los Pumas clasificaron a cuartos de final en la copa oro de Londres y sueñan con un titulo nuevo</p>
+                <p class="card-text fs-4">El seleccionado de rugby 7 de los Pumas clasificaron a cuartos de final en la copa oro de Londres y sueñan con un título nuevo.</p>
                 <a href="#" class="btn btn-light">Leer</a>
               </div>
             </div>
@@ -162,7 +162,7 @@
               <img src="img/denver-nuggets-campeon-de-la-nba_862x485.webp" class="card-img-top p-2" alt="Denver Post">
               <div class="card-body">
                 <h5 class="card-title fs-3 fw-bold">Denver Nuggets campeones de la NBA 2023</h5>
-                <p class="card-text fs-4">Con un desempeño extraordinario Denver se impuso frente a Miami por 4-1 y se consagro campeon de la NBA por primera vez en su historia</p>
+                <p class="card-text fs-4">Con un desempeño extraordinario Denver se impuso frente a Miami por 4-1 y se consagró campeón de la NBA por primera vez en su historia.</p>
                 <a href="#" class="btn btn-light">Leer</a>
               </div>
             </div>
@@ -190,8 +190,8 @@
           <div class="container py-4">
             <!-- form busqueda -->
             <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-success" type="submit">Search</button>
+              <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+              <button class="btn btn-success" type="submit">Buscar</button>
             </form>
             <!-- lista de temas -->
             <div class="list-group pt-5">
@@ -199,7 +199,7 @@
                 General
               </a>
               <a href="#" class="list-group-item list-group-item-action">Futbol</a>
-              <a href="#" class="list-group-item list-group-item-action">Basketball</a>
+              <a href="#" class="list-group-item list-group-item-action">Básquetbol</a>
               <a href="#" class="list-group-item list-group-item-action">Rugby</a>
               <a class="list-group-item list-group-item-action disabled">Proximamente</a>
             </div>
@@ -318,7 +318,7 @@
             <h3>Mas Info</h3>
           </div>
           <div class="p-1">
-            <p>Blog Deportivo creado para poder mantener informado a los fanaticos del mundo de los deportes. <br> contamos con las ultimas noticias sobre los deportes mas importantes y pasionales del mundo. <br> Futbol, Rugby, Basketball, Automovilismo, Tenis, Etc. <br> Informacion actualizada de las mejores competiciones de todos los deportes </p>
+            <p>Blog Deportivo creado para poder mantener informado a los fanáticos del mundo de los deportes. <br> Contamos con las últimas noticias sobre los deportes más importantes y pasionales del mundo. <br> Fútbol, Rugby, Básquetbol, Automovilismo, Tenis, Etc. <br> Información actualizada de las mejores competiciones de todos los deportes. </p>
             <div class="d-flex justify-content-end align-items-end">
               <div class="buttonStart d-flex justify-content-center align-items-center">
                 <a href="#bodyTop">⬆</a>
