Agregando detalles al main

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <div class="card-body">
                 <h5 class="card-title fs-3 fw-bold">Messi sobre el mundial 2026</h5>
                 <p class="card-text fs-4">La frase con la que Lionel Messi dio a entender su presencia en el mundial 2026.</p>
-                <a href="#" class="btn btn-leer">Leer</a>
+                <a href="#" class="btn btn-leer fw-bold text-light">Leer</a>
               </div>
             </div>
             <!-- post/card2 -->
@@ -157,7 +157,7 @@
               <div class="card-body">
                 <h5 class="card-title fs-3 fw-bold">Los Pumas 7's en cuartos</h5>
                 <p class="card-text fs-4">El seleccionado de rugby 7 de los Pumas clasificaron a cuartos de final en la copa oro de Londres y sueñan con un título nuevo.</p>
-                <a href="#" class="btn btn-leer">Leer</a>
+                <a href="#" class="btn btn-leer fw-bold text-light">Leer</a>
               </div>
             </div>
             <!-- post/card3 -->
@@ -166,7 +166,7 @@
               <div class="card-body">
                 <h5 class="card-title fs-3 fw-bold">Denver Nuggets campeones de la NBA 2023</h5>
                 <p class="card-text fs-4">Con un desempeño extraordinario Denver se impuso frente a Miami por 4-1 y se consagró campeón de la NBA por primera vez en su historia.</p>
-                <a href="#" class="btn btn-leer">Leer</a>
+                <a href="#" class="btn btn-leer fw-bold text-light">Leer</a>
               </div>
             </div>
             <!-- paginacion -->
@@ -187,7 +187,7 @@
               </ul>
             </nav>
             <div class="text-center">
-              <a href="galeria.html" class="botonGallery text-white bg-dark p-1 fs-6 fw-bold">Galeria</a>
+              <a href="galeria.html" class="botonGallery text-white p-1 fs-6 fw-bold">Galeria</a>
             </div>
           </div>
         </div>
@@ -249,7 +249,10 @@
               </div>
             </div>
             <hr>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat tempora facilis odio tempore cupiditate aspernatur provident maiores quidem, alias dicta vel rerum doloremque autem. Hic labore ex dolorum numquam corporis.</p>
+            <p class="d-flex justify-content-center text-light mt-4">¡Llegaste al final!</p>
+            <div class="d-flex justify-content-center">
+              <a<button type="button" class="btn btn-leer d-flex align-content-center" id="liveToastBtn"><a href="#bodyTop">↑ Subir</a></button></a>
+            </div>
           </div>
         </div>
       </div>
@@ -320,11 +323,6 @@
               </div>
               <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Ivan</h5></a>
             </div>
-            <div class="d-flex justify-content-end align-self-end d-md-none m-1">
-              <div class="buttonStart d-flex justify-content-center align-items-center">
-                <a href="#bodyTop">⬆</a>
-              </div>
-            </div>
           </div>
         </div>
 
@@ -335,15 +333,9 @@
             <h3>Mas Info</h3>
           </div>
           <div class="p-1">
-            <p>Blog Deportivo creado para poder mantener informado a los fanáticos del mundo de los deportes. <br> Contamos con las últimas noticias sobre los deportes más importantes y pasionales del mundo. <br> Fútbol, Rugby, Básquetbol, Automovilismo, Tenis, Etc. <br> Información actualizada de las mejores competiciones de todos los deportes. </p>
-            <div class="d-flex justify-content-end align-items-end">
-              <div class="buttonStart d-flex justify-content-center align-items-center">
-                <a href="#bodyTop">⬆</a>
-              </div>
-            </div>
+            <p>Blog Deportivo creado para poder mantener informado a los fanáticos del mundo de los deportes. <br> Contamos con las últimas noticias sobre los deportes más importantes y pasionales del mundo. <br> Fútbol, Rugby, Básquetbol, Automovilismo, Tenis, Etc. <br> Información actualizada de las mejores competiciones de todos los deportes.</p>
           </div>
         </div>
-        
       </div>
     </div>
   </footer>
