--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <meta name="twitter:title" content="Título del blog de noticias deportivas">
   <meta name="twitter:description" content="Blog de noticias deportivas con las últimas novedades, resultados y análisis de eventos deportivos.">
   <meta name="twitter:image" content="ruta-a-tu-imagen.jpg">
+  <link rel="stylesheet" href="styles/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
@@ -103,21 +104,21 @@
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div class="carousel-item active slider">
             <img src="img/messiSlider.jpg" class="d-block w-100" alt="Slide Futbol">
             <div class="carousel-caption d-none d-md-block">
               <h5 class="fs-1 fw-bolder">Fútbol</h5>
               <p class="fs-3 d-none d-lg-block">Lo mejor del deporte más famoso en el mundo entero</p>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item slider">
             <img src="img/rugbySlider.webp" class="d-block w-100" alt="Slide Rugby">
             <div class="carousel-caption d-none d-md-block">
               <h5 class="fs-1 fw-bolder">Rugby</h5>
               <p class="fs-3 d-none d-lg-block">Lo último del deporte con el mayor esfuerzo físico</p>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item slider">
             <img src="img/jokicSlider.jpeg" class="d-block w-100" alt="Slide NBA">
             <div class="carousel-caption d-none d-md-block">
               <h5 class="fs-1 fw-bolder">Básquetbol</h5>
