Agregando cosas en la pag contacto

--- a/contacto.html
+++ b/contacto.html
@@ -89,17 +89,95 @@
     <div class="contenedor">
       <div class="row">
           <div class="col-sm-12 text-center text-light fw-bold text mt-3 mb-3">
-            <h1>CONTACTO</h1>
+            <h1>CONTÁCTANOS</h1>
           </div>
           <div class="col-sm-6 d-flex justify-content-center mb-5">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14240.408879082126!2d-65.2072018!3d-26.8367009!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225d3ad7f30f1d%3A0xf8606cd659b8e3e4!2sRollingCode%20School!5e0!3m2!1ses-419!2sar!4v1687580332124!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="iframe"></iframe>
           </div>
-          <p>Aquí estamos ubicados</p>
           <div class="col-sm-6">
 
           </div>
       </div>
   </div>
   </main>
+
+  <footer>
+    <div class="container-fluid footer text-center">
+      <div class="row text-white">
+
+        <!-- col1 -->
+
+        <div class="col-sm-10 col-md-6 col-lg-4 d-none d-lg-block">
+          <div>
+            <img src="img/SBN.png" alt="iconoSBN" class="iconoSBN">
+          </div>
+          <div class="py-1 d-flex justify-content-center">
+            <p class="copyright">All Rights Reserved 2023 &copy;</p>
+          </div>
+        </div>
+
+        <!-- col2 -->
+
+        <div class="col-sm-10 col-md-6 col-lg-4">
+          <div class="py-3 d-flex align-items-center justify-content-center">
+            <h3 class="text-center">Nuestras redes</h3>
+          </div>
+          <div class="d-flex justify-content-around align-items-center flex-column py-1">
+
+            <!-- red1 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+              </div>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Damian</h5></a>
+            </div>
+
+            <!-- red2 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+              </div>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Luis</h5></a>
+            </div>
+
+            <!-- red3 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+              </div>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Marcos</h5></a>
+            </div>
+
+            <!-- red4 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+              </div>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Lucas</h5></a>
+            </div>
+
+            <!-- red5 -->
+            <div class="d-flex mb-1">
+              <div>
+                <img src="img/instagram.png" alt="instagram" class="iconInsta me-2">
+              </div>
+              <a href="#" class="link-light text-decoration-none" target="_blank"><h5>@Ivan</h5></a>
+            </div>
+          </div>
+        </div>
+
+        <!-- col3 -->
+
+        <div class="col-sm-10 col-md-6 col-lg-4 d-none d-md-block">
+          <div class="py-3">
+            <h3>Mas Info</h3>
+          </div>
+          <div class="p-1">
+            <p>Blog Deportivo creado para poder mantener informado a los fanáticos del mundo de los deportes. <br> Contamos con las últimas noticias sobre los deportes más importantes y pasionales del mundo. <br> Fútbol, Rugby, Básquetbol, Automovilismo, Tenis, Etc. <br> Información actualizada de las mejores competiciones de todos los deportes.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
